--- a/resources/public/styles.css
+++ b/resources/public/styles.css
@@ -1,49 +1,72 @@
 body {
-    display: flex;
-    justify-content: center;
-    text-align: center;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  font-family: "Work Sans", sans-serif;
+  background-color: lightgray;
+  font-size: 1.2rem;
 }
+
+h1 {
+font-size: 3rem;
+}
+
+h3 {
+  color: #e6e6e6;
+  font-size: 1.8rem;
+  /* font-family: 'Crimson Text', serif; */
+  font-weight: 500;
+}
+
 .window {
-    max-width: 40rem;
-    border: solid 3px black;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: lightgray;
-    margin-bottom: 2rem;
+  max-width: 50rem;
+  border: solid 3px black;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: lightgray;
+  margin-bottom: 4rem;
+  box-shadow: 0 5px 10px rgb(0 0 0 / 0.5);
 }
 
 .title-bar {
-    border-bottom: solid 3px black;
-    width: 100%;
-    text-align: center;
-    background-color: gray;
+  border-bottom: solid 3px black;
+  width: 100%;
+  text-align: center;
+  background-color: #999999;
 }
 
 .window-body {
-    min-height: 3rem;
-    padding: 2rem;
+  min-height: 3rem;
+  padding: 2rem;
 }
 
 .button {
-    padding: 1rem;
-    border-radius: 10px;
-    margin: 1rem;
-}
-
-input {
-    margin: 1rem;
-    padding: 0.5rem;
-    border-radius: 4px;
-}
-
-.range {
-    margin: 0;
-    padding: 0;
+  padding: 1rem 2rem;
+  border-radius: 4px;
+  margin: 1rem;
+  font-size: 1.2rem;
 }
 
 select {
-    margin: 1rem;
-    padding: 0.5rem;
+    font-size: 1.2rem;
+    border-radius: 4px;
+}
+
+input {
+  margin: 1rem;
+  padding: 0.5rem;
+  border-radius: 4px;
+  font-size: 1.2rem;
+}
+
+.range {
+  margin: 0;
+  padding: 0;
+}
+
+select {
+  margin: 1rem;
+  padding: 0.5rem;
 }
